[package]
name = "openssl-sys"
version = "0.9.49"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "FFI bindings to OpenSSL"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
links = "openssl"
build = "build/main.rs"

[features]
#vendored = ['openssl-src']
# sgx features
default = ["nosgx"]
nosgx = ["libc"]
sgx = ["sgx_tstd", "sgx_trts"]

[dependencies]
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", package="sgx_tstd", optional=true }
sgx_trts = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", package="sgx_trts", optional=true }
libc = { version="0.2", optional=true }

[build-dependencies]
cc = "1.0"
openssl-src = { version = "111.0.1", optional = true }
pkg-config = "0.3.9"
autocfg = "0.1.2"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

# We don't actually use metadeps for annoying reasons but this is still here for tooling
[package.metadata.pkg-config]
openssl = "1.0.1"
