[package]
name = "openssl"
version = "0.10.24"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "Apache-2.0"
description = "OpenSSL bindings"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]

[lib]
name = "openssl"
crate-type = ["rlib"]

# these are deprecated and don't do anything anymore
[features]
v101 = []
v102 = []
v110 = []
v111 = []
vendored = ['openssl-sys/vendored']
# sgx features
default = ["nosgx"]
nosgx = ["libc"]
sgx = ["sgx_tstd", "sgx_trts", "openssl-sys/sgx"]

[dependencies]
bitflags = "1.0"
cfg-if = "0.1"
foreign-types = "0.3.1"
lazy_static = {  version = "1", features = ["spin_no_std"] }
openssl-sys = { version = "0.9.48", path = "../openssl-sys",  default-features = false }
sgx_tstd = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git", package="sgx_tstd", optional=true }
sgx_trts = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git", package="sgx_trts", optional=true }
libc = { version="0.2", optional=true }

[dev-dependencies]
tempdir = "0.3"
hex = "0.3"
